--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ background-size: 100%;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
+  margin-top: 420px;
+  margin-left: 670px;
 }
 
 .button span {
@@ -48,12 +50,23 @@ background-size: 100%;
   right: 0;
 }
 
+
+  h1{
+
+    font-family: roboto;
+    color: #F4511E;
+    margin-top: 200px;
+    margin-right: 60px;
+
+  }
+
 	</style>
 </head>
 <body>
 
 
 <footer>
+  <h1 align="center">Site Under Maintenance</h1>
 	<button class="button" href="mailto:mkhandelwal8852003@gmail.com"><span>Contact Me</span></button>
 </footer>
 
